k8s/stag/serve-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: serve-web
spec:
  ports:
    - port: 80
      name: http
      targetPort: 3000
  selector:
    app: serve-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serve-web
  labels:
    app: serve-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: serve-web
  template:
    metadata:
      labels:
        app: serve-web
    spec:
      restartPolicy: Always
      containers:
        - name: serve-web
          image: rg.fr-par.scw.cloud/ultrasoundmoney/serve-web
          command: ["yarn", "start-stag"]
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 3
      imagePullSecrets:
        - name: registry-secret
